# Intercom

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
.beads/: metadata.json
.beads/backup/: backup_state.json
.clavain/interspect/: interspect.db
.github/: dependabot.yml
.github/workflows/: bump-version.yml  skill-tests.yml  skills-only.yml  test.yml  update-tokens.yml
config/: intercom.toml.example  intercomd.service
container/: Dockerfile.codex  Dockerfile.gemini  build.sh
container/agent-runner/src/: index.ts  ipc-mcp-stdio.ts
container/codex-runner/: package-lock.json  package.json  tsconfig.json
container/codex-runner/src/: index.ts
container/gemini-runner/: package-lock.json  package.json
container/gemini-runner/src/: auth.ts  index.ts  tools.ts
container/shared/: demarch-query.sh  demarch-tools.ts  executor.ts  ipc-demarch.ts  ipc-input.ts  ipc-tools.ts  protocol.ts  session-base.ts  system-prompt.ts
docs/: intercom-roadmap.md  intercom-vision.md  nanoclaw-architecture-final.md  roadmap.md
docs/migrations/: rust-foundation.md  rust-phase3-plan.md  rust-phase4-plan.md
docs/plans/: 2026-02-25-ironclaw-phase5-integration.md  2026-02-26-ironclaw-phase6-cutover.md
groups/global/: CLAUDE.md
groups/main/: CLAUDE.md
launchd/: com.intercom.plist
rust/: Cargo.toml  README.md
rust/intercom-compat/: Cargo.toml
rust/intercom-compat/src/: lib.rs
rust/intercom-core/: Cargo.toml
rust/intercom-core/src/: config.rs  container.rs  demarch.rs  ipc.rs  lib.rs  persistence.rs  runtime.rs
rust/intercomd/: Cargo.toml
rust/intercomd/src/: commands.rs  db.rs  events.rs  ipc.rs  main.rs  message_loop.rs  process_group.rs  queue.rs  scheduler.rs  scheduler_wiring.rs  telegram.rs
rust/intercomd/src/container/: mod.rs  mounts.rs  runner.rs  secrets.rs  security.rs
rust/intercomd/tests/: integration_smoke.rs
setup/: container.ts  environment.ts  mounts.ts  service.test.ts  service.ts  status.ts  verify.ts  whatsapp-auth.ts
src/: config.ts  container-runner.test.ts  container-runner.ts  container-runtime.test.ts  container-runtime.ts  db.ts  group-queue.test.ts  group-queue.ts  host-callback.ts  index.ts  intercomd-client.test.ts  intercomd-client.ts  ipc.ts  mount-security.ts  query-handlers.test.ts  query-handlers.ts  router.ts  stream-accumulator.ts  summarizer.ts  types.ts  whatsapp-auth.ts
src/channels/: telegram.ts  whatsapp.test.ts  whatsapp.ts
