[package]
name = "intercom-compat"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
intercom-core = { path = "../intercom-core" }
rusqlite.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile = "3"
