[package]
name = "intercomd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
clap.workspace = true
cron.workspace = true
futures.workspace = true
intercom-compat = { path = "../intercom-compat" }
intercom-core = { path = "../intercom-core" }
libc.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
